--- a/styles/style.css
+++ b/styles/style.css
@@ -862,3 +862,30 @@ body {
     clip-path: polygon(0 100%, 100% 100%, 100% 16%, 90% 1%, 84% 19%, 81% 1%, 75% 19%, 68% 0%, 60% 5%, 51% 33%, 44% 1%, 34% 16%, 29% 1%, 19% 29%, 17% 6%, 12% 25%, 6% 5%, 0 31%);
   }
 
+
+/* voor iphone SE */
+
+  @media screen and (max-width: 500px){
+    .pluto{
+      display:none;
+    }
+    .earth{
+      display:none;
+    }
+    .saturn{
+      display:none;
+    }
+    .clouds{
+      display:none;
+    }
+    html{
+      overflow-x:hidden
+    }
+    .rocket-container-for-vw.rocket-sun{
+      transform:
+        translateY(calc(-120vh + 35rem + 5rem + 1rem - 5rem))
+        translateX(calc(-60vw + 10rem + 5rem + 3vw - 8.75rem)) 
+        rotate(-60deg)
+        scale(.25);
+    }
+      }
