--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 
 html{
   scroll-behavior: smooth;
+  overflow-X: hidden;
 }
 body{
     width:100vw;
@@ -19,6 +20,9 @@ body{
 
     /* background-image: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 50 50' style='enable-background:new 0 0 50 50%3B' xml:space='preserve'%3E%3Cstyle type='text/css'%3E.st1%7Bopacity:0.7%3Bfill:%23FFFFFF%3B%7D.st3%7Bopacity:0.1%3Bfill:%23FFFFFF%3B%7D%3C/style%3E%3Ccircle class='st3' cx='4' cy='14' r='1'/%3E%3Ccircle class='st3' cx='43' cy='3' r='1'/%3E%3Ccircle class='st3' cx='31' cy='30' r='2'/%3E%3Ccircle class='st3' cx='19' cy='23' r='1'/%3E%3Ccircle class='st3' cx='37' cy='22' r='1'/%3E%3Ccircle class='st3' cx='43' cy='16' r='1'/%3E%3Ccircle class='st3' cx='8' cy='45' r='1'/%3E%3Ccircle class='st3' cx='29' cy='39' r='1'/%3E%3Ccircle class='st3' cx='13' cy='37' r='1'/%3E%3Ccircle class='st3' cx='47' cy='32' r='1'/%3E%3Ccircle class='st3' cx='15' cy='4' r='2'/%3E%3Ccircle class='st3' cx='9' cy='27' r='1'/%3E%3Ccircle class='st3' cx='30' cy='9' r='1'/%3E%3Ccircle class='st3' cx='25' cy='15' r='1'/%3E%3Ccircle class='st3' cx='21' cy='45' r='2'/%3E%3Ccircle class='st3' cx='42' cy='45' r='1'/%3E%3C/svg%3E"); */
 }
+/* body {
+  min-height: 500vh;
+} */
 
 :root{
   --body-background: linear-gradient(#5CC4CA 5%, #F6C456 40%,#F16116);
@@ -289,9 +293,7 @@ opacity: 0;
   }
 } */
 
-body {
-  min-height: 500vh;
-}
+
 
 .rocket-animation{
   transform: translateY(-40rem);
@@ -888,4 +890,26 @@ body {
         rotate(-60deg)
         scale(.25);
     }
+
+    @media (prefers-color-scheme:dark){
+      :root{
+      --body-background: url("https://www.nasa.gov/sites/default/files/thumbnails/image/stsci-h-p1821a-m-1699x20001a.png");
+      --background-body-color: gray;
+      --background-size: 800%;
+      --animation-background: moving-background 40s linear infinite;
+    }
+    
+    @keyframes moving-background{
+      50%{
+        background-position-x: 50%;
+        background-position-y: 50%;
       }
+    }
+    }
+      }
+
+  @media screen and (max-width: 1000px){
+    html{
+      overflow-x: hidden;
+    }
+  }
